wxc/include/wxc.h



/** Create from rgb int. */
TClass(wxColour) wxColour_CreateFromInt(int rgb);

/** Return colors as an rgb int. */
int wxColour_GetInt( TSelf(wxColour) colour);